--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
-  "dependencies": {
-    "axios": "^1.10.0",
-    "bcrypt": "^6.0.0",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.17.0"
-  }
+ "dependencies": {
+  "express": "^5.1.0",
+  "dotenv": "^16.5.0",
+  "mongoose": "^8.16.0",
+  "bcrypt": "^6.0.0",
+  "jsonwebtoken": "^9.0.2",
+  "axios": "^1.10.0",
+  "@types/node": "^24.0.3",     
+  "@types/express": "^5.0.3", 
+  "@types/jsonwebtoken": "^9.0.10",
+  "@types/bcrypt": "^5.0.2"
+}
 }
