--- a/package.json
+++ b/package.json
@@ -13,31 +13,28 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.3",
-    "@types/jest": "^30.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.0.3",
-    "@types/supertest": "^6.0.3",
-    "jest": "^30.0.2",
+  "dependencies": {
+    "express": "^5.1.0",
+    "dotenv": "^16.5.0",
     "mongoose": "^8.16.0",
-    "nodemon": "^3.1.10",
-    "supertest": "^7.1.1",
+    "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "axios": "^1.10.0",
+
+
+    "@types/node": "^24.0.3",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/bcrypt": "^5.0.2"
+  },
+  "devDependencies": {
+    "jest": "^30.0.2",
     "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
-  },
- "dependencies": {
-  "express": "^5.1.0",
-  "dotenv": "^16.5.0",
-  "mongoose": "^8.16.0",
-  "bcrypt": "^6.0.0",
-  "jsonwebtoken": "^9.0.2",
-  "axios": "^1.10.0",
-  "@types/node": "^24.0.3",     
-  "@types/express": "^5.0.3", 
-  "@types/jsonwebtoken": "^9.0.10",
-  "@types/bcrypt": "^5.0.2"
-}
+    "typescript": "^5.8.3",
+    "supertest": "^7.1.1",
+    "nodemon": "^3.1.10",
+    "@types/jest": "^30.0.0",
+    "@types/supertest": "^6.0.3"
+  }
 }
